clusters/homelab/aj-blogs/traefik-middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: blog-strip
  namespace: hugo
spec:
  stripPrefix:
    prefixes:
      - /blog
