clusters/homelab/aj-blogs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aj-blogs
  namespace: hugo
spec:
  selector:
    app: aj-blogs
  ports:
    - name: http
      port: 80
      targetPort: 80
